# Scissors_Console

./: .gitmodules  Cargo.toml  README.md  required_visual_studio_packages.txt
app/: Cargo.toml
app/src/: data_collection.rs  init.js  main.rs  ui.rs  utils.rs
app/ui/: index.html  init.js
client/: Cargo.toml
client/src/: main.rs
client/static/: index.html
client/static/css/: styles.css
events/: Cargo.toml
events/src/: lib.rs
nativefiledialog-rs/: Cargo.toml
nativefiledialog-rs/src/: error.rs  lib.rs
nativefiledialog-sys/: Cargo.toml  build.rs
nativefiledialog-sys/src/: lib.rs  test.rs
nidaqmx/: Cargo.toml
nidaqmx-rs/: Cargo.toml
nidaqmx-rs/src/: ai_channel.rs  ci_encoder_channel.rs  lib.rs
nidaqmx-sys/: Cargo.toml  build.rs
nidaqmx/src/: lib.rs  nidaqmx.rs
nidaqmx/src/nidaqmx/: ai_channel.rs  callback_utils.rs  ci_encoder_channel.rs  co_channel.rs  task_handle.rs
scissors_console/: Cargo.toml
scissors_console/src/: data_collection.rs  main.rs  ui.rs
scissors_console/ui/: index.html  init.js
server/: Cargo.toml
server/src/: main.rs
src/: data_collection.rs  main.rs  ui.rs
ui/: index.html  init.js
