[package]
name = "tether_test"
version = "0.1.0"
authors = ["Amer Safdari <safda004@umn.edu>"]
edition = "2018"

[dependencies]
tether = "0.2"
log = {version = "0.4", features = ["std"]}
nfd = "0.0.4"
parking_lot = {version = "0.7", features = ["nightly"]}

futures-preview = "0.3.0-alpha.12"

[profile.release]
lto = "on"
opt-level = 3
