[package]
name = "scissors_console"
version = "0.2.0"
authors = ["Amer Safdari <safda004@umn.edu>"]
edition = "2018"

[dependencies]
# nidaqmx = {path = "../nidaqmx"}

tether = "0.2"
log = {version = "0.4", features = ["std"]}
nfd = "0.0.4"
parking_lot = {version = "0.7", features = ["nightly"]}

futures-preview = "0.3.0-alpha.12"
