[package]
name = "scissors_console"
version = "0.5.0"
authors = ["Amer Safdari <safda004@umn.edu>"]
edition = "2018"

[dependencies]
nidaqmx = {path = "../nidaqmx-rs"}
nativefiledialog-rs = {path = "../nativefiledialog-rs"}

time = "0.1"
tether = "0.3"
log = {version = "0.4", features = ["std"]}
parking_lot = "0.8"
futures = "0.1"
tokio-current-thread = "0.1.6"
atomic = "0.4"
