[package]
name = "server"
version = "0.1.0"
authors = ["Amer Safdari <safda004@umn.edu>"]
edition = "2018"

[dependencies]
nidaqmx = {path = "../nidaqmx"}
events = {path = "../events"}

tokio = "0.1"
tokio-codec = "0.1"
log = { version = "0.4"}
parking_lot = {version = "0.7", features = ["nightly"]}
futures = "0.1"
